# a2a-vs-mcp

./: .gitignore  README.md
agent-client/: pyproject.toml
agent-client/mcp_a2a_client/: agent.py
main-agent/: README.md  pyproject.toml
main-agent/main_agent/: .env.swp  agent.py
mcp-server/: HELP.md  README.md  build.gradle  test.sh
mcp-server/src/main/java/it/ns/mcp_server/: Event.java  McpServerApplication.java  TrackingEvent.java  TrackingService.java
mcp-server/src/main/resources/: application.properties
mcp-server/src/test/java/it/ns/mcp_server/: McpServerApplicationTests.java
remote-agent/: README.md  pyproject.toml
remote-agent/remote_agent/: agent.json  agent.py
