[tool.poetry]
name = "main-agent"
version = "0.1.0"
description = "Host agent using A2A and MCP"
authors = ["Nicola Santi <nicola@nicolasanti.it>"]
readme = "README.md"
packages = [{ include = "main_agent" }]

[tool.poetry.dependencies]
python = "^3.10"
google-adk = {extras = ["a2a"], version = "*"}
python-dotenv = "^1.0.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
